--- a/stories/atoms/Button/Button.css
+++ b/stories/atoms/Button/Button.css
@@ -7,4 +7,15 @@
     text-align: center;
     border: 1px solid transparent;
     border-radius: 5px;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+}
+
+.color-primary{
+    color: var(--color-white);
+    background: var(--color-primary);
+}
+
+.color-secondary{
+    color: var(--color-white);
+    background: var(--color-secondary);
 }
