change dummies values

--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -3,7 +3,7 @@
     --color-white: #ffffff;
     --color-black: #000000;
     --color-primary: blue;
-    --color-secondary: red;
+    --color-secondary: gray;
     --color-success: green;
     --color-warning: orange;
     --color-error: red;
